--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -16,3 +16,112 @@
 @import url('./badges.css');
 @import url('./back-link.css');
 @import url('./footer.css');
+
+
+img {
+  max-width: 100%;
+  height: auto;
+  display: block;
+}
+
+.gallery {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  justify-content: flex-start;
+  justify-self: center;
+  flex-wrap: wrap;
+  user-select: none;
+  list-style: none;
+  gap: 24px;
+  padding: 0;
+  margin: 0;
+}
+
+.gallery img {
+  max-width: 360px;
+  height: 200px;
+  object-fit: cover;
+}
+
+.cont {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.feedback-form{
+  display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    text-align: left;
+}
+
+.input-name{
+  font-family: "Montserrat", sans-serif;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.04em;
+    color: #2e2f42;
+    margin-bottom: 8px;
+    margin-left: 0;
+}
+
+.form-input{
+border: 1px solid #808080;
+  border-radius: 4px;
+  width: 360px;
+  height: 40px;
+  margin-bottom: 8px;
+}
+
+.form-input:hover {
+  border: 1px solid #000;
+}
+
+.form-input::placeholder {
+  font-family: "Montserrat", sans-serif;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.04em;
+    color: #2e2f42;
+}
+
+
+
+.form-textarea{
+  border: 1px solid #808080;
+    border-radius: 4px;
+    width: 360px;
+    height: 80px;
+    margin-bottom: 16px;
+    resize: none;
+}
+
+.form-textarea:hover {
+  border: 1px solid #000;
+}
+
+.form-btn{
+  display: block;
+  margin: 0;
+  border-radius: 8px;
+    padding: 8px 16px;
+    width: auto;
+    height: 40px;
+    background-color: #4e75ff;
+    font-family: "Montserrat", sans-serif;
+      font-weight: 500;
+      font-size: 16px;
+      line-height: 1.5;
+      letter-spacing: 0.04em;
+      color: #fff;
+      border: none;
+        cursor: pointer;
+        align-self: flex-start;
+}
+
+.form-btn:hover{
+  background-color: #6c8cff;
+}
